# clikor

./: CMakeLists.txt  README.md  build-vs2022.bat
src/main/cpp/: Gui.cpp  Preferences.cpp  main.cpp  os.cpp  system.cpp
